# Micro-Quadruped-Robot

./: .gitignore  CMakeLists.txt  LICENSE  README.md
main/: CMakeLists.txt  main.c  main.h
main/connect_wifi/: connect_wifi.c  connect_wifi.h
main/gpio_utils/: gpio_utils.c  gpio_utils.h
main/http_handlers/: http_handlers.c  http_handlers.h
main/kinematics/: forwardKinematics.c  inverseKinematics.c  kinematics.h
main/main/: config.h
main/servo_driver/: servo_driver.c  servo_driver.h
main/web_server/: web_server.c  web_server.h
simulations/: calc_fk.m  calc_jacobian.m  plotRoboticLeg.m  sim_fk.m  sim_fk_globalFrame.m  sim_ik.m
